syntax = "proto3";

package flipt.ofrep;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/visibility.proto";
import "google/protobuf/struct.proto";

option go_package = "go.flipt.io/flipt/rpc/flipt/ofrep";

message EvaluateFlagRequest {
  string key = 1;
  map<string, string> context = 2;
}

message EvaluationResponse {
  string key = 1;
  EvaluateReason reason = 2;
  string variant = 3;
  google.protobuf.Struct metadata = 4;
  google.protobuf.Value value = 5;
}

enum EvaluateReason {
  UNKNOWN = 0;
  DISABLED = 1;
  TARGETING_MATCH = 2;
  DEFAULT = 3;
}

message EvaluateBulkRequest {
  map<string, string> context = 2;
}

message BulkEvaluationResponse {
  repeated EvaluationResponse flags = 1 [(google.api.field_behavior) = REQUIRED];
}

service OFREPService {
  option (google.api.api_visibility) = {restriction: "flipt:sdk:ignore"};
  // OFREP single flag evaluation
  rpc EvaluateFlag(EvaluateFlagRequest) returns (EvaluationResponse) {
    option (google.api.http) = {
      post: "/ofrep/v1/evaluate/flags/{key}"
      body: "*"
    };
    option (gnostic.openapi.v3.operation) = {operation_id: "ofrep.evaluateFlag"};
  }
  // OFREP bulk flag evaluation
  rpc EvaluateBulk(EvaluateBulkRequest) returns (BulkEvaluationResponse) {
    option (google.api.http) = {
      post: "/ofrep/v1/evaluate/flags"
      body: "*"
    };
    option (gnostic.openapi.v3.operation) = {operation_id: "ofrep.evaluateFlagsBulk"};
  }
}
