syntax = "proto3";

package analytics;

import "google/api/annotations.proto";

option go_package = "go.flipt.io/flipt/rpc/v2/analytics";

message GetFlagEvaluationsCountRequest {
  string environment_key = 1;
  string namespace_key = 2;
  string flag_key = 3;
  string from = 4;
  string to = 5;
}

message GetFlagEvaluationsCountResponse {
  repeated string timestamps = 1;
  repeated float values = 2;
}

service AnalyticsService {
  rpc GetFlagEvaluationsCount(GetFlagEvaluationsCountRequest) returns (GetFlagEvaluationsCountResponse) {
    option (google.api.http) = {get: "/internal/v2/analytics/environments/{environment_key}/namespaces/{namespace_key}/flags/{flag_key}"};
  }
}
